--- a/SearchEngineAlg.csproj
+++ b/SearchEngineAlg.csproj
@@ -9,7 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Miyconst.Cyriller" Version="0.1.1" />
+    <PackageReference Include="System.IO.Hashing" Version="7.0.0" />
   </ItemGroup>
 
 </Project>
