--- a/SearchEngineAlg.csproj
+++ b/SearchEngineAlg.csproj
@@ -9,7 +9,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="BenchmarkDotNet" Version="0.13.5" />
+    <PackageReference Include="DeepMorphy" Version="2.0.3" />
+    <PackageReference Include="NRedisStack" Version="0.6.1" />
     <PackageReference Include="System.IO.Hashing" Version="7.0.0" />
   </ItemGroup>
-
+  
 </Project>
